# emtt

./: .dockerignore  .editorconfig  .gitignore  .licenserc.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.toml  installer.nsi
i18n/en-US/: emtt.ftl
i18n/ru-RU/: emtt.ftl
src/: config.rs  lang.rs  main.rs  syslog.rs  telegram.rs  webhook.rs
