[package]
name = "emtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio =  { version = "1.49.0", features = ["full", "net"] }
toml = "0.9.10"
