[package]
name = "emtt"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/black-roland/emtt"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.29"
minijinja = "2.14.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full", "net"] }
toml = "0.9.10"
clap-i18n-richformatter = { version = "0.3.0", features = ["derive"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
unic-langid = "0.9.5"
rust-embed = "8.5.0"
once_cell = "1.21.0"
openssl = { version = "0.10" }

[features]
boosty = []
vendored = ["openssl/vendored"]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = ":edge"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image = ":edge"
